<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="我的訂單">
        <menu>
            <item
                android:id="@+id/nav_awaiting_payment"
                android:icon="@drawable/ic_awaiting_payment"
                android:title="@string/awaiting_payment" />
            <item
                android:id="@+id/nav_awaiting_shipment"
                android:icon="@drawable/ic_awaiting_shipment"
                android:title="@string/awaiting_shipment" />
            <item
                android:id="@+id/nav_shipped"
                android:icon="@drawable/ic_shipped"
                android:title="@string/shipped" />
            <item
                android:id="@+id/historyFragment"
                android:icon="@drawable/awaiting_review"
                android:title="@string/awaiting_review" />
            <item
                android:id="@+id/nav_exchange"
                android:icon="@drawable/exchange"
                android:title="@string/exchange" />
        </menu>
    </item>
</menu>
