<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dialog" type="app.appworks.school.stylish.dialog.SubscribeDialog"/>
        <variable name="viewModel" type="app.appworks.school.stylish.dialog.SubscribeViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_f5f5f5"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499">

            <TextView
                android:id="@+id/subscribe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:text="@string/subscribe_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/subscribe_hint"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.emailTyped}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subscribe_title" />

            <Button
                android:id="@+id/button_subscribe"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@color/gray_f5f5f5"
                android:enabled="@{viewModel.checkEmailAvailable()? true : false}"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.subscribeNews()}"
                android:text="@string/confirm"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_close"
                app:layout_constraintTop_toTopOf="@+id/button_close" />

            <Button
                android:id="@+id/button_close"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@color/gray_f5f5f5"
                android:fontFamily="@font/noto_sans"
                android:onClick="@{() -> dialog.dismiss()}"
                android:text="@string/cancel"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_subscribe"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>